getting things in order